--- a/front-end/src/css/navbar.css
+++ b/front-end/src/css/navbar.css
@@ -6,3 +6,14 @@
     height: 15%;
     color: white;
 }
+
+.bar_element {
+    background-color: #333; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
